<resources>
    <string name="app_name">TenantFinder</string>
    <string name="add_property">Add Property</string>
    <string name="view_tenants">View Tenants</string>
    <string name="you_are">You are?</string>
    <string name="tenant">Tenant</string>
    <string name="owner">Owner</string>
    <string name="owner_s_name">Owner\'s name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="give_details">Give details</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
    <string name="enter_details">Enter Details</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign up?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="gmail">Gmail</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="email">email</string>
    <string name="registeration">Registeration</string>
    <string name="your_name">Your name</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="available_properties_for_rent">Available properties for rent</string>
    <string name="subham_kumar">Subham Kumar</string>
    <string name="_0909875488">0909875488</string>
    <string name="jasper_a_430">Jasper A 430</string>
    <string name="near_hospital_metro_temple_airport_and_something_something">Near hospital, metro , temple, airport, and something something</string>
    <string name="_1111111111">1111111111</string>
    <string name="jasper_a430_iitism_dhanbad_jharkhand_826004">Jasper A430, IITISM , Dhanbad, Jharkhand,826004</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="authentication_email">Authentication email</string>
    <string name="search_properties">Search Properties</string>
    <string name="incase_if_you_want_to_update_your_data_then_enter_new_data_with_same_authentication_email">Incase if you want to update your data then enter new data with same Authentication Email</string>
    <string name="invalid_name">Please enter Valid name</string>
</resources>