<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="#E9DBF8"
    app:cardCornerRadius="30dp"
    app:cardElevation="600dp">

    <TextView
        android:id="@+id/nameO"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg3"
        android:backgroundTint="#EED8EF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/subham_kumar"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/phoneO"
        app:drawableStartCompat="@drawable/ic_baseline_phone_24"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/input_bg3"
        android:backgroundTint="#EED8EF"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:text="@string/_1111111111"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="UseCompatTextViewDrawableXml">

    </TextView>


    <TextView
        android:id="@+id/addressO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_bg3"
        android:backgroundTint="#EED8EF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/jasper_a430_iitism_dhanbad_jharkhand_826004"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic">

    </TextView>
    <TextView
        android:id="@+id/detailsO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_bg3"
        android:backgroundTint="#EED8EF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/near_hospital_metro_temple_airport_and_something_something"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic">

    </TextView>

</androidx.cardview.widget.CardView>