<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Input_Tenant">


    <EditText
        android:id="@+id/NameTenant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/MobileNumberT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/NameTenant"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/NameTenant"
        app:layout_constraintTop_toBottomOf="@+id/NameTenant" />

    <EditText
        android:id="@+id/DetailsTenant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="Address"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_file_copy_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/details"
        android:inputType="number|textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/MobileNumberT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MobileNumberT"
        app:layout_constraintTop_toBottomOf="@+id/MobileNumberT" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/DetailsTenant"
        app:layout_constraintStart_toStartOf="@+id/DetailsTenant"
        app:layout_constraintTop_toBottomOf="@+id/DetailsTenant"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>