<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg2"
        android:clickable="false"
        android:minHeight="150dp"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/imageViewT"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:id="@+id/imageViewT1"
                android:src="@drawable/ic_baseline_person">

            </ImageView>

        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageViewT"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="2dp"
        android:text="@string/subham_kumar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_below="@id/textName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imageViewT"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawablePadding="5dp"
        android:paddingStart="1dp"
        android:text="@string/_0909875488"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_phone_24"
        tools:ignore="RtlSymmetry"></TextView>

    <TextView
        android:id="@+id/textDetails"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_below="@id/textPhone"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imageViewT"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="7dp"
        android:text="@string/jasper_a_430"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry"></TextView>





</RelativeLayout>